@@ -1,5 +1,6 @@
 Release 4.15
-	- improve support for private datasets: fix custom HTTP headers with CKAN URL munging
+	- improve support for private datasets: fix custom HTTP headers
+	  with CKAN URL munging; add HXL_HTTP_HEADER and --http-header support for all scripts
 
 2019-03-04 Release 4.14
 	- report external validation errors (e.g. missing taxonomy)
